fixed gutter gap around news blurbs

--- a/css/_uswds-theme-custom-styles.scss
+++ b/css/_uswds-theme-custom-styles.scss
@@ -4604,6 +4604,24 @@ h2.section-header {
   @include u-border-bottom('base-light');
 }
 
+.news-blurb-grid-item {
+  @include grid-col(12);
+  @include u-padding-top(2);
+
+  @include at-media('tablet') {
+    @include grid-col(6);
+  }
+  @include at-media('tablet-lg'){
+    @include grid-col(4);
+  }
+  @include at-media('desktop'){
+    padding-left: units($theme-column-gap-mobile / 2) !important;
+    padding-right: units($theme-column-gap-mobile / 2) !important;
+  }
+    
+}
+
+
 .news-blurb {
   @include u-outline('1px');
   @include u-outline-color('base-lighter');
